--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
+    "npm": "^6.4.1",
     "passport": "^0.4.0"
   }
 }
